force-app/main/default/objects/LDCT_Project__c/LDCT_Project__c.object-meta.xml
<CustomObject>
    <label>LDCT Project</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Narrative Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>