force-app/main/default/objects/LDCT_Project__c/fields/Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Type__c</fullName>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Speaker Creation</fullName>
            </value>
            <value>
                <fullName>Speaker Modification/Deletion</fullName>
            </value>
            <value>
                <fullName>Fund-Speaker Modification</fullName>
            </value>
            <value>
                <fullName>Affiliate Modification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>